fixes alert so it always is visible

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,9 +6,9 @@ body {
 }
 
 .alert-fixed {
-  position:absolute;
+  position:fixed;
   width: 100%;
-  top: 50px;
+  top: 30px;
   z-index: 9000;
 
   .alert {
